// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result View Tests Render with Columns 1`] = `
<ResultView
  resultSet={
    {
      "columns": [
        {
          "dataType": {
            "type": 5,
          },
          "field": "0",
          "title": "col1",
        },
        {
          "dataType": {
            "type": 0,
          },
          "field": "1",
          "title": "col2",
        },
        {
          "dataType": {
            "type": 1,
          },
          "field": "2",
          "title": "col3",
        },
        {
          "dataType": {
            "type": 2,
          },
          "field": "3",
          "title": "col4",
        },
        {
          "dataType": {
            "type": 3,
          },
          "field": "4",
          "title": "col5",
        },
        {
          "dataType": {
            "type": 4,
          },
          "field": "5",
          "title": "col6",
        },
        {
          "dataType": {
            "type": 5,
          },
          "field": "6",
          "title": "col7",
        },
        {
          "dataType": {
            "type": 6,
          },
          "field": "7",
          "title": "col8",
        },
        {
          "dataType": {
            "type": 7,
          },
          "field": "8",
          "title": "col9",
        },
        {
          "dataType": {
            "type": 8,
          },
          "field": "9",
          "title": "col10",
        },
        {
          "dataType": {
            "type": 9,
          },
          "field": "10",
          "title": "col11",
        },
        {
          "dataType": {
            "type": 10,
          },
          "field": "11",
          "title": "col12",
        },
        {
          "dataType": {
            "type": 11,
          },
          "field": "12",
          "title": "col13",
        },
        {
          "dataType": {
            "type": 12,
          },
          "field": "13",
          "title": "col14",
        },
        {
          "dataType": {
            "type": 13,
          },
          "field": "14",
          "title": "col15",
        },
        {
          "dataType": {
            "type": 14,
          },
          "field": "15",
          "title": "col16",
        },
        {
          "dataType": {
            "type": 15,
          },
          "field": "16",
          "title": "col17",
        },
        {
          "dataType": {
            "type": 16,
          },
          "field": "17",
          "title": "col18",
        },
        {
          "dataType": {
            "type": 17,
          },
          "field": "18",
          "title": "col19",
        },
        {
          "dataType": {
            "type": 18,
          },
          "field": "19",
          "title": "col20",
        },
        {
          "dataType": {
            "type": 19,
          },
          "field": "20",
          "title": "col21",
        },
        {
          "dataType": {
            "type": 20,
          },
          "field": "21",
          "title": "col22",
        },
        {
          "dataType": {
            "type": 21,
          },
          "field": "22",
          "title": "col23",
        },
        {
          "dataType": {
            "type": 22,
          },
          "field": "23",
          "title": "col24",
        },
        {
          "dataType": {
            "type": 23,
          },
          "field": "24",
          "title": "col25",
        },
        {
          "dataType": {
            "type": 24,
          },
          "field": "25",
          "title": "col26",
        },
        {
          "dataType": {
            "type": 25,
          },
          "field": "26",
          "title": "col27",
        },
        {
          "dataType": {
            "type": 26,
          },
          "field": "27",
          "title": "col28",
        },
        {
          "dataType": {
            "type": 27,
          },
          "field": "28",
          "title": "col29",
        },
        {
          "dataType": {
            "type": 28,
          },
          "field": "29",
          "title": "col30",
        },
        {
          "dataType": {
            "type": 29,
          },
          "field": "30",
          "title": "col31",
        },
        {
          "dataType": {
            "type": 30,
          },
          "field": "31",
          "title": "col32",
        },
        {
          "dataType": {
            "type": 31,
          },
          "field": "32",
          "title": "col33",
        },
        {
          "dataType": {
            "type": 32,
          },
          "field": "33",
          "title": "col34",
        },
        {
          "dataType": {
            "type": 33,
          },
          "field": "34",
          "title": "col35",
        },
        {
          "dataType": {
            "type": 34,
          },
          "field": "35",
          "title": "col36",
        },
        {
          "dataType": {
            "type": 35,
          },
          "field": "36",
          "title": "col37",
        },
        {
          "dataType": {
            "type": 36,
          },
          "field": "37",
          "title": "col38",
        },
        {
          "dataType": {
            "type": 37,
          },
          "field": "38",
          "title": "col39",
        },
        {
          "dataType": {
            "type": 38,
          },
          "field": "39",
          "title": "col40",
        },
        {
          "dataType": {
            "type": 39,
          },
          "field": "40",
          "title": "col41",
        },
        {
          "dataType": {
            "type": 40,
          },
          "field": "41",
          "title": "col42",
        },
        {
          "dataType": {
            "type": 41,
          },
          "field": "42",
          "title": "col43",
        },
        {
          "dataType": {
            "type": 42,
          },
          "field": "43",
          "title": "col44",
        },
        {
          "dataType": {
            "type": 43,
          },
          "field": "44",
          "title": "col45",
        },
        {
          "dataType": {
            "type": 44,
          },
          "field": "45",
          "title": "col46",
        },
        {
          "dataType": {
            "type": 45,
          },
          "field": "46",
          "title": "col47",
        },
        {
          "dataType": {
            "type": 46,
          },
          "field": "47",
          "title": "col48",
        },
        {
          "dataType": {
            "type": 47,
          },
          "field": "48",
          "title": "col49",
        },
      ],
      "data": {
        "currentPage": 0,
        "executionInfo": {
          "text": "Endless Possibilities",
          "type": 2,
        },
        "rows": [],
      },
      "resultId": "123",
      "sql": "select 1",
      "type": "resultSet",
    }
  }
>
  <Container
    className="msg resultView"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultView"
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <TreeGrid
        columns={
          [
            {
              "field": "0",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col1",
              "width": undefined,
            },
            {
              "field": "1",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col2",
              "width": undefined,
            },
            {
              "field": "2",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col3",
              "width": undefined,
            },
            {
              "field": "3",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col4",
              "width": undefined,
            },
            {
              "field": "4",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col5",
              "width": undefined,
            },
            {
              "field": "5",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col6",
              "width": undefined,
            },
            {
              "field": "6",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col7",
              "width": undefined,
            },
            {
              "field": "7",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col8",
              "width": undefined,
            },
            {
              "field": "8",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col9",
              "width": undefined,
            },
            {
              "field": "9",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col10",
              "width": undefined,
            },
            {
              "field": "10",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col11",
              "width": undefined,
            },
            {
              "field": "11",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col12",
              "width": undefined,
            },
            {
              "field": "12",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col13",
              "width": undefined,
            },
            {
              "field": "13",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col14",
              "width": undefined,
            },
            {
              "field": "14",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col15",
              "width": undefined,
            },
            {
              "field": "15",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col16",
              "width": undefined,
            },
            {
              "field": "16",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col17",
              "width": undefined,
            },
            {
              "field": "17",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col18",
              "width": undefined,
            },
            {
              "field": "18",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col19",
              "width": undefined,
            },
            {
              "field": "19",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col20",
              "width": undefined,
            },
            {
              "field": "20",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col21",
              "width": undefined,
            },
            {
              "field": "21",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col22",
              "width": undefined,
            },
            {
              "field": "22",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col23",
              "width": undefined,
            },
            {
              "field": "23",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col24",
              "width": undefined,
            },
            {
              "field": "24",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col25",
              "width": undefined,
            },
            {
              "field": "25",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col26",
              "width": undefined,
            },
            {
              "field": "26",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col27",
              "width": undefined,
            },
            {
              "field": "27",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col28",
              "width": undefined,
            },
            {
              "field": "28",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col29",
              "width": undefined,
            },
            {
              "field": "29",
              "formatter": "plaintext",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col30",
              "width": undefined,
            },
            {
              "field": "30",
              "formatter": "datetime",
              "formatterParams": {
                "outputFormat": "HH:mm:ss",
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col31",
              "width": undefined,
            },
            {
              "field": "31",
              "formatter": "datetime",
              "formatterParams": {
                "outputFormat": "HH:mm:ss",
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col32",
              "width": undefined,
            },
            {
              "field": "32",
              "formatter": "datetime",
              "formatterParams": {
                "outputFormat": "YYYY",
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col33",
              "width": undefined,
            },
            {
              "field": "33",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col34",
              "width": undefined,
            },
            {
              "field": "34",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col35",
              "width": undefined,
            },
            {
              "field": "35",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col36",
              "width": undefined,
            },
            {
              "field": "36",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col37",
              "width": undefined,
            },
            {
              "field": "37",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col38",
              "width": undefined,
            },
            {
              "field": "38",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col39",
              "width": undefined,
            },
            {
              "field": "39",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col40",
              "width": undefined,
            },
            {
              "field": "40",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col41",
              "width": undefined,
            },
            {
              "field": "41",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col42",
              "width": undefined,
            },
            {
              "field": "42",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col43",
              "width": undefined,
            },
            {
              "field": "43",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col44",
              "width": undefined,
            },
            {
              "field": "44",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col45",
              "width": undefined,
            },
            {
              "field": "45",
              "formatter": "textarea",
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col46",
              "width": undefined,
            },
            {
              "field": "46",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 50,
              "resizable": true,
              "title": "col47",
              "width": undefined,
            },
            {
              "field": "47",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col48",
              "width": undefined,
            },
            {
              "field": "48",
              "formatter": [Function],
              "formatterParams": {},
              "minWidth": 150,
              "resizable": true,
              "title": "col49",
              "width": undefined,
            },
          ]
        }
        onCellContext={[Function]}
        onColumnResized={[Function]}
        options={
          {
            "alternatingRowBackgrounds": false,
            "horizontalGridLines": true,
            "layout": "fitData",
            "resizableRows": true,
            "selectionType": 3,
            "verticalGridLines": true,
          }
        }
        style={
          {
            "fontSize": "10pt",
          }
        }
        tableData={[]}
      >
        <div
          className="msg treeGrid horizontalGrid verticalGrid"
          style={
            {
              "fontSize": "10pt",
            }
          }
        />
      </TreeGrid>
      <Menu
        id="cellContextMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="cellContextMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="cellContextMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultView>
`;

exports[`Result View Tests Render with Error/Response 1`] = `
<ResultView
  resultSet={
    {
      "columns": [],
      "data": {
        "currentPage": 0,
        "executionInfo": {
          "text": "Error",
          "type": 0,
        },
        "rows": [],
      },
      "resultId": "123",
      "sql": "select 1",
      "type": "resultSet",
    }
  }
>
  <Container
    className="msg resultView"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultView"
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <Menu
        id="cellContextMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="cellContextMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="cellContextMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultView>
`;

exports[`Result View Tests Standard Rendering 1`] = `
<ResultView
  resultSet={
    {
      "columns": [],
      "data": {
        "currentPage": 0,
        "rows": [],
      },
      "resultId": "123",
      "sql": "select 1",
      "type": "resultSet",
    }
  }
>
  <Container
    className="msg resultView"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultView"
      style={
        {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <TreeGrid
        columns={[]}
        onCellContext={[Function]}
        onColumnResized={[Function]}
        options={
          {
            "alternatingRowBackgrounds": false,
            "horizontalGridLines": true,
            "layout": "fitData",
            "resizableRows": true,
            "selectionType": 3,
            "verticalGridLines": true,
          }
        }
        style={
          {
            "fontSize": "10pt",
          }
        }
        tableData={[]}
      >
        <div
          className="msg treeGrid horizontalGrid verticalGrid"
          style={
            {
              "fontSize": "10pt",
            }
          }
        />
      </TreeGrid>
      <Menu
        id="cellContextMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="cellContextMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="cellContextMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultView>
`;
